@@ -10,7 +10,7 @@ require_once( dirname(__FILE__) . '/../../../functions/functions.php' );
 # initialize user object
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
-$Admin	 	= new Admin ($Database);
+$Admin	 	= new Admin ($Database, false);
 $Tools	 	= new Tools ($Database);
 $Result 	= new Result ();
 
@@ -18,8 +18,8 @@ $Result 	= new Result ();
 $User->check_user_session();
 # check maintaneance mode
 $User->check_maintaneance_mode ();
-# check maintaneance mode
-$User->check_maintaneance_mode ();
+# validate permissions
+$User->check_module_permissions ("nat", 2, true, true);
 
 # get NAT object
 $nat = $Admin->fetch_object ("nat", "id", $_POST['id']);
@@ -126,4 +126,3 @@ if(isset($_POST['object_type']) && isset($_POST['object_id'])) {
 else {
      $Result->show("danger", _("Missing object type or id"), true);
 }
-?>
