@@ -94,7 +94,7 @@ if(sizeof($address)>1) {
     $active = @$_GET['tab']=="permissions" ? "active" : "";
     print " <li role='presentation' class='$active'><a href='".create_link("subnets", $subnet['sectionId'], $subnet['id'], "address-details", $address['id'], "permissions")."'>"._("Permissions")."</a></li>";
     }
-    if($User->settings->enableNAT==1) {
+    if($User->settings->enableNAT==1 && $User->get_module_permissions ("nat")>0) {
     $active = @$_GET['tab']=="nat" ? "active" : "";
     print " <li role='presentation' class='$active'><a href='".create_link("subnets", $subnet['sectionId'], $subnet['id'], "address-details", $address['id'], "nat")."'>"._("NAT")."</a></li>";
     }
