@@ -361,7 +361,9 @@ else {
 			    print $Addresses->address_type_format_tag($addresses[$n]->state);
 
                 # set subnet nat
-                $Addresses->print_nat_link($all_nats, $all_nats_per_object, $subnet, $addresses[$n]);
+                if($User->get_module_permissions ("nat")>0) {
+	                $Addresses->print_nat_link($all_nats, $all_nats_per_object, $subnet, $addresses[$n]);
+	            }
 
 			    print $dns_records2."</td>";
 
@@ -450,9 +452,13 @@ else {
 		        	# get device details
 		        	$device = (array) $Tools->fetch_object("devices", "id", $addresses[$n]->switch);
 		        	# set rack
-		        	if ($User->settings->enableRACK=="1")
+		        	if ($User->settings->enableRACK=="1" && $User->get_module_permissions ("racks")>1) {
 		        	$rack = $device['rack']>0 ? "<i class='btn btn-default btn-xs fa fa-server showRackPopup' data-rackid='$device[rack]' data-deviceid='$device[id]'></i>" : "";
 																		  print "<td class='hidden-xs hidden-sm hidden-md'>$rack <a href='".create_link("tools","devices",@$device['id'])."'>". @$device['hostname'] ."</a></td>";
+					}
+					else {
+						print "<td class='hidden-xs hidden-sm hidden-md'> <a href='".create_link("tools","devices",@$device['id'])."'>". @$device['hostname'] ."</a></td>";
+					}
 				}
 
 				# print port
